# wxWidgets-template

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
ui/: ui.cpp  ui.fbp  ui.h
